# gauges

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SteinhartHart.cpp  SteinhartHart.h  display.cpp  display.h  display_test.cpp  index.html  main.cpp  measurement.cpp  measurement.h  oil.cpp  oil.h  packet.h  temp_convert.cpp  temperature.cpp  temperature.h  voltage.cpp  voltage.h
css/: custom_gauges.css
js/: custom_gauges.js
schematic/: SCH_gauges_v2_2023-05-08.json
server/: data.json  server.cr
